[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Inventory/ItemIvent_BTN.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 10

[node name="ItemIvent_BTN" type="Button"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
flat = true
expand_icon = true
script = ExtResource( 3 )

[node name="UI" type="Node2D" parent="."]
z_index = 100

[node name="BG_Infos" type="Panel" parent="UI" groups=["BTEquip"]]
material = SubResource( 1 )
margin_left = 1.0
margin_top = 70.0
margin_right = 141.0
margin_bottom = 159.0

[node name="Name" type="Label" parent="UI/BG_Infos"]
margin_right = 139.0
margin_bottom = 21.0
text = "Item Name"
align = 1
valign = 1
autowrap = true

[node name="Desc" type="Label" parent="UI/BG_Infos"]
margin_top = 22.0
margin_right = 139.0
margin_bottom = 88.0
text = "Description"
align = 1
valign = 1
autowrap = true

[node name="BT_Equip" type="Button" parent="UI/BG_Infos"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_right = 40.0
margin_bottom = 30.0
text = "EQUIPAR"

[connection signal="pressed" from="." to="." method="_on_ItemIvent_BTN_pressed"]
[connection signal="pressed" from="UI/BG_Infos/BT_Equip" to="." method="_on_BT_Equip_pressed"]
